@@ -2,6 +2,9 @@ Changes done to the Interval Arithmetic package.
 
 Version 4.101 on ?? June 2001
 - Remove warnings in the test-suite.
+- Regenerate filters for the new equal_planeC3.
+- Use the new macros in include/CGAL/Kernel/interface_macros.h for
+  Filtered_kernel and Kernel_checker.
 
 Version 4.100 on 20 June 2001
 - Arithmetic_filter.h => Filtered_exact.h.
